implement everything else, including gradient normalization add tests

--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-29T15:00:50.268562004Z",
-     "start_time": "2023-10-29T15:00:50.268290484Z"
+     "end_time": "2023-10-30T11:13:22.179569930Z",
+     "start_time": "2023-10-30T11:13:22.176570874Z"
     }
    },
    "outputs": [],
@@ -19,8 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'(' was never closed (optimizer.py, line 83)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001B[0;36m(most recent call last)\u001B[0m:\n",
+      "\u001B[0m  File \u001B[1;32m~/soft/miniconda3/envs/ml/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3526\u001B[0m in \u001B[1;35mrun_code\u001B[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001B[0m\n",
+      "\u001B[0;36m  Cell \u001B[0;32mIn[2], line 6\u001B[0;36m\n\u001B[0;31m    from riemannian.optimizer import RiemannianOptimizer\u001B[0;36m\n",
+      "\u001B[0;36m  File \u001B[0;32m~/code/riemannian/riemannian/optimizer.py:83\u001B[0;36m\u001B[0m\n\u001B[0;31m    return cls([submodule for submodule in module.named_modules()]\u001B[0m\n\u001B[0m              ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m '(' was never closed\n"
+     ]
+    }
+   ],
    "source": [
     "import torch as t\n",
     "import tntorch as tn\n",
@@ -32,11 +44,66 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T15:01:18.678973919Z",
-     "start_time": "2023-10-29T15:01:18.665178306Z"
+     "end_time": "2023-10-30T11:13:23.118159951Z",
+     "start_time": "2023-10-30T11:13:22.178825421Z"
     }
    },
    "id": "814d4d5f967c1622"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Sequential(\n",
+      "  (0): Sequential(\n",
+      "    (0): Linear(in_features=2, out_features=3, bias=True)\n",
+      "    (1): Linear(in_features=2, out_features=3, bias=True)\n",
+      "  )\n",
+      "  (1): Sequential(\n",
+      "    (0): Linear(in_features=2, out_features=3, bias=True)\n",
+      "    (1): Linear(in_features=2, out_features=3, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "0 Sequential(\n",
+      "  (0): Linear(in_features=2, out_features=3, bias=True)\n",
+      "  (1): Linear(in_features=2, out_features=3, bias=True)\n",
+      ")\n",
+      "0.0 Linear(in_features=2, out_features=3, bias=True)\n",
+      "0.1 Linear(in_features=2, out_features=3, bias=True)\n",
+      "1 Sequential(\n",
+      "  (0): Linear(in_features=2, out_features=3, bias=True)\n",
+      "  (1): Linear(in_features=2, out_features=3, bias=True)\n",
+      ")\n",
+      "1.1 Linear(in_features=2, out_features=3, bias=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch import nn\n",
+    "linear1 = nn.Linear(2, 3)\n",
+    "linear2 = nn.Linear(2, 3)\n",
+    "linear3 = nn.Linear(2, 3)\n",
+    "\n",
+    "network = nn.Sequential(\n",
+    "    nn.Sequential(linear1, linear2),\n",
+    "    nn.Sequential(linear2, linear3),\n",
+    ")\n",
+    "\n",
+    "for name, value in network.named_modules():\n",
+    "    print(name, value)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-30T11:14:16.314062020Z",
+     "start_time": "2023-10-30T11:14:16.270304017Z"
+    }
+   },
+   "id": "ed6cc7d3191077c1"
   },
   {
    "cell_type": "code",
